...
            Row(
                modifier = Modifier.fillMaxWidth(),
                horizontalArrangement = Arrangement.SpaceBetween,
                verticalAlignment = Alignment.CenterVertically
            ) {
                Text(
                    text = "Dashboard",
                    style = MaterialTheme.typography.displaySmall,
                    color = MaterialTheme.colorScheme.onBackground,
                    fontWeight = FontWeight.Bold
                )
                Row {
                   if (isConnected) Text("🟢", modifier = Modifier.padding(end=8.dp)) else Text("🔴", modifier = Modifier.padding(end=8.dp))
...
                Spacer(modifier = Modifier.height(4.dp))
                
                TextButton(
                    onClick = { onRecalibrateClick() },
                    colors = ButtonDefaults.textButtonColors(contentColor = MaterialTheme.colorScheme.onPrimary)
                ) {
                    Text("Recalibrate", fontWeight = FontWeight.Bold)
                }
            }
        }
    }
}

...
